change to LuaTex description.

--- a/main.tex
+++ b/main.tex
@@ -1,1 +1,1 @@
-\documentclass[dvipdfmx]{beamer}\usepackage{graphicx}\usepackage{bm}\renewcommand{\familydefault}{\sfdefault}\usepackage{txfonts}\renewcommand{\kanjifamilydefault}{\gtdefault}\usepackage[deluxe, expert]{otf}\usetheme{Darmstadt}\usecolortheme{dolphin}\AtBeginSection[]{  \begin{frame}<beamer>    \tableofcontents[sectionstyle=show/hide,subsectionstyle=hide/show/hide]    \begin{figure}      \flushright{        \includegraphics[width=3cm]{image/iwbtg.eps}      }    \end{figure}  \end{frame}  \addtocounter{framenumber}{-1}}%-----------------------------------------------------------\title{タイトル}\author{@asi1024}\institute{Kyoto Univ. Informatics and Mathematical Science 2nd}\date{\today}\begin{document}\frame{\titlepage}\frame{  \tableofcontents[sectionstyle=show,subsectionstyle=hide]}%\section{はじめに}%\input{inc/introduction}%\section{グラフとツリー}%\input{inc/graph}\section{木を利用したデータ構造}%\input{inc/binaryheap}\input{inc/binomialheap}%\section{グラフアルゴリズム}%\input{inc/kruskal}%\input{inc/dijkstra}%\section{最後に}%\input{inc/conclusion}\end{document}
+\documentclass{beamer}\usepackage{luatexja}\usepackage{hyperref}\hypersetup{unicode}\usepackage{bm}\usetheme{Darmstadt}\usecolortheme{dolphin}\usefonttheme[onlymath]{serif}%-----------------------------------------------------------\AtBeginSection[]{  \begin{frame}<beamer>    \tableofcontents[sectionstyle=show/hide,subsectionstyle=hide/show/hide]    \begin{figure}      \flushright{        \includegraphics[width=3cm]{image/iwbtg.eps}      }    \end{figure}  \end{frame}  \addtocounter{framenumber}{-1}}%-----------------------------------------------------------\title{タイトル}\author{@asi1024}\institute{Kyoto Univ. Informatics and Mathematical Science 2nd}\date{\today}\begin{document}\frame{\titlepage}\frame{  \tableofcontents[sectionstyle=show,subsectionstyle=hide]}%\section{はじめに}%\input{inc/introduction}%\section{グラフとツリー}%\input{inc/graph}\section{木を利用したデータ構造}%\input{inc/binaryheap}%\input{inc/binomialheap}\input{inc/fibonacciheap}%\input{inc/unionfindtree}%\section{グラフアルゴリズム}%\input{inc/kruskal}%\input{inc/dijkstra}%\section{最後に}%\input{inc/conclusion}\end{document}
