--- a/inc/conclusion.tex
+++ b/inc/conclusion.tex
@@ -1,1 +1,1 @@
-\frame{  \frametitle{まとめ}  \begin{itemize}    \item Light Version なのにスライド61枚もあるのどうするよ    \item この感じだと完全版は500枚くらいになる！？    \item 発表時間が5時間くらいあれば・・・    \item というかそんな膨大なスライド作る時間あんのか    \item 死ぬしかない    \item はあ  \end{itemize}}\frame{  \frametitle{参考文献}  \begin{block}{参考文献}    \itemize{    \item アルゴリズムイントロダクション 第1巻 第2巻    \item アルゴリズムC++    \item 組み合わせ最適化 第2版    \item 計算幾何 理論の基礎から実装まで    }  \end{block}}\frame{  \center{    ご清聴ありがとうございました\\  }}
+\frame{  \frametitle{まとめ}  \begin{itemize}  \item ヒープは便利．  \pause  \item 償却計算量  \item ポテンシャル関数\\　\\  \pause  \item こういう理論っぽい講座は映えない  \item せめて実演とか出来るような内容ならば・・・  \item 時間調整も難しいね  \end{itemize}}\frame{  \frametitle{参考文献}  \begin{block}{参考文献}    \itemize{    \item アルゴリズムイントロダクション 第1巻 第2巻    \item 組み合わせ最適化 第2版    }  \end{block}}\frame{  \center{    ご清聴ありがとうございました\\  }}
