--- a/inc/fibonacciheap.tex
+++ b/inc/fibonacciheap.tex
@@ -202,7 +202,7 @@
     \center{
       \includegraphics[width=10cm]{image/fibonacci19.pdf}
       　\\　\\
-      $\Phi(H) = t(H) + 2m(H) = 14 + 2 \cdot 3 = 20$\\
+      $\Phi(H) = t(H) + 2m(H) = 3 + 2 \cdot 3 = 9$\\
     }
   \end{exampleblock}
 }
@@ -338,12 +338,8 @@
 }
 
 \frame{
-  \begin{block}{補題}
-    \center{
-      $k \in \mathbb{N}$ について，$s_k \geq F_{k+2}$
-    }
-  \end{block}
   \begin{block}{}
+    ここで $k \in \mathbb{N}$ について $s_k \geq F_{k+2}$ となることを示す．\\　\\
     $k$に関する帰納法により証明する．\\
     $k=0$と$k=1$については自明．\\
     $k\geq 2$として，$i \in \{0,1,\cdots ,k-1\}$を仮定したとき，\\
