--- a/main.tex
+++ b/main.tex
@@ -1,1 +1,1 @@
-\documentclass{beamer}\usepackage{luatexja}\usepackage{hyperref}\hypersetup{unicode}\usepackage{bm}\usetheme{Darmstadt}\usecolortheme{dolphin}\usefonttheme[onlymath]{serif}%-----------------------------------------------------------\AtBeginSection[]{  \begin{frame}<beamer>    \tableofcontents[sectionstyle=show/hide,subsectionstyle=hide/show/hide]    \begin{figure}      \flushright{        \includegraphics[width=3cm]{image/iwbtg.pdf}      }    \end{figure}  \end{frame}  \addtocounter{framenumber}{-1}}%-----------------------------------------------------------\title{ヒープと計算量解析}\author{@asi1024}\institute{Kyoto Univ. Informatics and Mathematical Science 2nd}\date{\today}\begin{document}\frame{\titlepage}\frame{  \tableofcontents[sectionstyle=show,subsectionstyle=hide]}\section{はじめに}\input{inc/introduction}\section{グラフと木の定義}\input{inc/graph}\section{いろいろなプライオリティキュー}\input{inc/priorityqueue}\input{inc/binaryheap}\input{inc/binomialheap}\input{inc/fibonacciheap}\section{ヒープを用いたアルゴリズム}\input{inc/dijkstra}\section{最後に}\input{inc/conclusion}\end{document}
+\documentclass{beamer}\usepackage{luatexja}\usepackage{hyperref}\hypersetup{unicode}\usepackage{bm}\usepackage{comment}\usetheme{Darmstadt}\usecolortheme{dolphin}\usefonttheme[onlymath]{serif}%-----------------------------------------------------------\AtBeginSection[]{  \begin{frame}<beamer>    \tableofcontents[sectionstyle=show/hide,subsectionstyle=hide/show/hide]    \begin{figure}      \flushright{        \includegraphics[width=3cm]{image/iwbtg.pdf}      }    \end{figure}  \end{frame}  \addtocounter{framenumber}{-1}}%-----------------------------------------------------------\title{ヒープと計算量解析}\author{@asi1024}\institute{Kyoto Univ. Informatics and Mathematical Science 2nd}\date{\today}\begin{document}\frame{\titlepage}\frame{  \tableofcontents[sectionstyle=show,subsectionstyle=hide]}\section{はじめに}\input{inc/introduction}\section{予備知識}\input{inc/graph}\input{inc/complexity}\section{いろいろなプライオリティキュー}\input{inc/priorityqueue}\input{inc/binaryheap}\input{inc/binomialheap}\input{inc/fibonacciheap}\section{ヒープを用いたアルゴリズム}\input{inc/dijkstra}\section{最後に}\input{inc/conclusion}\end{document}
